@@ -1,6 +1,8 @@
 Revision history for {{ $dist->name }}:
 
 {{$NEXT}}
+  [Tests]
+  - Fix MooX::TypeTiny test to bail out if MooX::TypeTiny missing, #1.
 
 v0.4.1    2020-01-03 18:34:29+00:00 Europe/London
   [Documentation]
